--- a/style.css
+++ b/style.css
@@ -6,4 +6,15 @@ body{background-color: blue ;}
 
 }
 
-.texto {}
+.texto {
+    font-size: 30px%;
+    text-align: justify;
+       color: black; 
+
+}
+.listas1 {
+  font: size 30px;
+  text-align: center
+list-style-position:inside ;
+}
+listas2
