--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
-body{background-color: blue ;}
+body {
+  background-color: azure ;
+}
+
 #titulo {
   font-size: 80px ; 
   text-align: center;     
-  color: blue; 
+  color: indigo; 
 
+}
+header {
+   padding: 20px; 
+   background-color: black;
+   border-bottom: 5px solid;
+   font-size: 35px;
+   color: black;
 }
 
 .texto {
-    font-size: 30px%;
+    font-size: 60px%;
     text-align: justify;
        color: black; 
 
 }
 .listas1 {
-  font: size 30px;
+  font-size 30px;
   text-align: center
 list-style-position:inside ;
 }
+
 listas2
